infra/configs/base/gateway/coder-certificate.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: coder-gateway
  namespace: prod
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: coder-gateway-options
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.coder.isning.moe"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.coder.isning.moe"
      tls:
        mode: Terminate
        certificateRefs:
          - name: coder-gateway-wildcard-coder-isning-moe-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder-tls-redirect
  namespace: prod
spec:
  parentRefs:
    - name: coder-gateway
      sectionName: http
  hostnames:
    - "*.coder.isning.moe"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: coder-gateway-trusted-proxy
  namespace: prod
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: coder-gateway
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
        listener:
          portNumber: 443
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            use_remote_address: false
            xff_num_trusted_hops: 1
