infra/configs/base/gateway/gateway-infra.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infra-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-infra
spec:
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/cloudflare-proxied: "false" # Disable Cloudflare proxy for this service
      # MUST be patched
      external-dns.alpha.kubernetes.io/hostname: "clustername.ingress.internal.isning.moe" # Set the desired hostnames for External DNS
  gatewayClassName: istio
  listeners:
    # Used for internal reroute
    - name: http
      protocol: HTTP
      port: 8080
      hostname: "*.clustername.isning.moe"
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Selector
          selector:
            matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: NotIn
              values:
              - prod
              - staging
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.clustername.isning.moe"
      tls:
        mode: Terminate
        certificateRefs:
          - name: infra-gateway-wildcard-isning-moe-tls
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Selector
          selector:
            matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: NotIn
              values:
              - prod
              - staging
  allowedListeners:
    namespaces:
      from: Selector
      selector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
          - prod
          - staging
---
# Redirect HTTP to HTTPS
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: kube-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: http-listener-set
      sectionName: http-raw
  hostnames:
  - "*.clustername.isning.moe"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
---
# Set XFF for specific listener to get correct client IP and protocol information for the services behind the gateway.
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: set-xff-for-specific-listener
  namespace: kube-system
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: infra-gateway
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          use_remote_address: false
          xff_num_trusted_hops: 1
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: set-xfp-for-specific-listener
  namespace: kube-system
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: infra-gateway
  configPatches:
  - applyTo: ROUTE_CONFIGURATION
    match:
      context: GATEWAY
      routeConfiguration:
        portNumber: 80
    patch:
      operation: MERGE
      value:
        request_headers_to_add:
        - header:
            key: x-forwarded-port
            value: "80"
          append_action: OVERWRITE_IF_EXISTS_OR_ADD
        - header:
            key: x-forwarded-proto
            value: "http"
          append_action: OVERWRITE_IF_EXISTS_OR_ADD
  - applyTo: ROUTE_CONFIGURATION
    match:
      context: GATEWAY
      routeConfiguration:
        portNumber: 443 
    patch:
      operation: MERGE
      value:
        request_headers_to_add:
        - header:
            key: x-forwarded-port
            value: "443"
          append_action: OVERWRITE_IF_EXISTS_OR_ADD
        - header:
            key: x-forwarded-proto
            value: "https"
          append_action: OVERWRITE_IF_EXISTS_OR_ADD
  - applyTo: ROUTE_CONFIGURATION
    match:
      context: GATEWAY
      routeConfiguration:
        portNumber: 8080
    patch:
      operation: MERGE
      value:
        request_headers_to_add:
        # Trust XFP from proxy before 8080 listener (e.g. cloudflare tunnel).
        - header:
            key: x-forwarded-port
            value: "443"
          append_action: ADD_IF_ABSENT
        - header:
            key: x-forwarded-proto
            value: "https"
          append_action: ADD_IF_ABSENT
